fix position of hero image and change color of logo to blue to fix contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@
     font-family: Lora, sans-serif;
     text-transform: uppercase;
     letter-spacing: 1px;
-    color:black;
+    color: blue;
    }
 
    #logo {
